# FIB-PES

PowerPathFinder/: CODEOWNER  ModelConceptual.drawio  ONBOARDING.md  README.md  ServiceDefinition.md  deploy-checklist.md  docker-compose.development.yml  docker-compose.macos.yml  docker-compose.yml
PowerPathFinder/ppf/: README.md  pyproject.toml
PowerPathFinder/ppf/common/models/: achievement.py  calendar.py  charger.py  fcm.py  payment.py  route.py  user.py  valuation.py
PowerPathFinder/scripts/: build.sh  clean-up.sh  clean.bat  clean.sh  compose-up.bat  compose-up.sh  dev-db.sh  set-up.sh
ppf-admin-page/: Dockerfile  Dockerfile.macos  manage.py  requirements.txt
ppf-admin-page-development/: Dockerfile.dev  README.md
ppf-admin-page-development/adminApp/: settings.py  urls.py  wsgi.py
ppf-admin-page-development/adminPage/: apps.py
ppf-admin-page/adminApp/: asgi.py
ppf-admin-page/adminPage/: decorators.py  forms.py  urls.py  views.py
ppf-chat-engine/: ChatEngineDesign.md  Dockerfile  Dockerfile.macos  README.md  architecture.drawio  go.mod  go.sum
ppf-chat-engine-development/: .gitignore
ppf-chat-engine/auth/: user_api.go
ppf-payments-api/: CODEOWNER  Dockerfile  Dockerfile.dev  README.md  manage.py  requirements.txt
ppf-payments-api-development/: Dockerfile.macos
ppf-route-api/: Dockerfile  Dockerfile.dev  Dockerfile.macos  manage.py  requirements.txt
ppf-user-api/: CODEOWNER  Dockerfile  Dockerfile.dev  Dockerfile.macos  manage.py  requirements.txt
ppf_mobile_client/: .gitignore  README.md  firebase.json  package-lock.json  pubspec.yaml
(+193 files in other folders)
